<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">WiFi QR Generator</string>
	<string name="wep">WEP</string>
	<string name="wpa">WPA/WPA2</string>
	<string name="none">None</string>
	<string name="auth_type">Authentication Type</string>
	<string name="network_name">Network Name (SSID)</string>
	<string name="network_password">Network Password</string>
	<string name="generate">Generate</string>
	<string name="no_name">You have not specified a network name.</string>
	<string name="no_pass">You have not specified a password.</string>
	<string name="save">Save</string>
	<string name="share_qr">Share QR Code</string>
	<string name="root_detected_message">Root access has been detected on your device. Would you like to allow this application to access your saved WiFi networks and passwords?</string>
	<string name="yes">Yes</string>
	<string name="cancel">Cancel</string>
	<string name="saved">Saved</string>
	<string name="delete_wifi_network_msg">Do you want to delete this WiFi network?</string>
	<string name="saved_networks">Saved networks</string>
	<string name="remembered_networks">Remembered networks</string>
    <string name="saved_success">WiFi network successfully saved.</string>
</resources>
